<resources>
    <string name="app_name">UAV Telemetry</string>
    <string name="altitude">Altitude: </string>
    <string name="battery">Battery: </string>
    <string name="connection">Connection</string>
    <string name="computer_ip">Computer IP: </string>
    <string name="computer_port">Computer Port: </string>
    <string name="device_ip">Device IP: </string>
    <string name="device_port">Device Port: </string>
    <string name="generate_mission">Generate Mission</string>
    <string name="latitude">Latitude: </string>
    <string name="longitude">Longitude: </string>
    <string name="mission_generation">Mission Generation</string>
    <string name="number_of_x">Number of X</string>
    <string name="number_of_y">Number of Y</string>
    <string name="start_listening">Start Listening</string>
    <string name="stop_listening">Stop Listening</string>
    <string name="speed">Speed: </string>
    <string name="telemetry">Telemetry</string>
</resources>
